--- a/properties.yml
+++ b/properties.yml
@@ -4,7 +4,7 @@ spring:
   redis:
     host: localhost
     port: 6379
-    timeOfLife: 60000
+    timeOfLife: 60000000
   data:
     mongodb:
       database: final
