--- a/properties.yml
+++ b/properties.yml
@@ -5,6 +5,16 @@ spring:
     host: localhost
     port: 6379
     timeOfLife: 60000000
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: proyecto.coder2022@gmail.com
+    password: ndmekqepuawgalhu
+    properties:
+      smtp:
+        auth: true
+        starttls:
+          enable: true
   data:
     mongodb:
       database: final
